--- a/index.html
+++ b/index.html
@@ -36,16 +36,16 @@
             
             <div id="p-wrapper">
               <div class="project-tile">
-                <a href="https://www.wikipedia.org/" target="_blank" alt="First project, wikipedia.org"><img class="" src="https://drive.google.com/uc?id=1DRIc-9pBBd9uNyyKtZRmUr40DU6lqaT_"></a>
-                <p>Wikipedia Website</p>
+                <a href="https://tamasigerald.github.io/random-quote-machine/" target="_blank" alt="First project, wikipedia.org"><img class="" src="https://drive.google.com/uc?id=1DRIc-9pBBd9uNyyKtZRmUr40DU6lqaT_"></a>
+                <p>RQM</p>
               </div>
               <div class="project-tile">
-                <a href="https://www.wikipedia.org/" target="_blank" alt="First project, wikipedia.org"><img class="" src="https://drive.google.com/uc?id=1DRIc-9pBBd9uNyyKtZRmUr40DU6lqaT_"></a>
-                <p>Wikipedia Website</p>
+                <a href="https://tamasigerald.github.io/tip-calculator/" target="_blank" alt="First project, wikipedia.org"><img class="" src="https://drive.google.com/uc?id=1DRIc-9pBBd9uNyyKtZRmUr40DU6lqaT_"></a>
+                <p>Tip Calc</p>
               </div>
               <div class="project-tile">
-                <a href="https://www.wikipedia.org/" target="_blank" alt="First project, wikipedia.org"><img class="" src="https://drive.google.com/uc?id=1DRIc-9pBBd9uNyyKtZRmUr40DU6lqaT_"></a>
-                <p>Wikipedia Website</p>
+                <a href="https://lojja.ga/" target="_blank" alt="First project, wikipedia.org"><img class="" src="https://drive.google.com/uc?id=1DRIc-9pBBd9uNyyKtZRmUr40DU6lqaT_"></a>
+                <p>B-day</p>
               </div>
               <div class="project-tile">
                 <a href="https://www.wikipedia.org/" target="_blank" alt="First project, wikipedia.org"><img class="" src="https://drive.google.com/uc?id=1DRIc-9pBBd9uNyyKtZRmUr40DU6lqaT_"></a>
